Add button to add route on route page
